# minirust

./: .gitignore  README.md  ci.sh  mini  minimize.sh  prelude.md  rust-toolchain.toml  specr.toml  test.sh
tooling/minimize/: Cargo.toml  build.rs  cov.sh
tooling/minimize/intrinsics/: Cargo.toml
tooling/minimize/intrinsics/src/: lib.rs
tooling/minimize/src/: bb.rs  chunks.rs  constant.rs  enums.rs  function.rs  get.rs  main.rs  program.rs  rvalue.rs  sysroot.rs  ty.rs  util.rs  vtable.rs
tooling/minimize/tests/: compiletest.rs  rust.sh  ui.rs
tooling/minimize/tests/helper/: eq.rs  transmute.rs
tooling/minimize/tests/panic/: array_out_of_bounds.rs  array_out_of_bounds.stderr  assert.rs  assert.stderr  catch_unwind_abort.rs  slice_out_of_bounds.rs  struct_abort.rs  struct_abort.stdout  struct_unwind.rs  struct_unwind.stdout
tooling/minimize/tests/pass/: align.rs  align_of_val.rs  arith_offset.rs  array.rs  array_out_of_bounds.rs  assert.rs  atomic.rs  atomic.stdout  bool.rs  calls.rs  calls.stdout  casts.rs  casts.stdout  catch_unwind.rs  catch_unwind.stdout  closure.rs  closure_iterator_combinator.rs  const.rs  const_gap.rs  drop.rs  enum_direct_tag.rs  enum_direct_tag.stdout  enum_niche_tag.rs  enum_niche_tag.stdout  enums.rs  exit.rs  fn_def.rs  fn_ptr.rs  generic_promoted.rs  generics.rs  i64.rs  if.rs  intrinsic_alloc_dealloc.rs  is_zero.rs  iter.rs  let_underscore_place_mention.rs  locks.rs  match.rs  match.stdout  mut_static.rs  (+38 more)
tooling/minimize/tests/ub/: array_out_of_bounds.rs  array_out_of_bounds.stderr  assume.rs  catch_unwind.rs  destroy_prov.rs  (+34 more)
(+270 files in other folders)
