[package]
name = "minimize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minirust-rs = { path = "../minirust-rs" }
miniutil = { path = "../miniutil"}

[dev-dependencies]
ui_test = "0.5"

[[test]]
name = "compiletest"
harness = false
