[package]
name = "minimize"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minirust-rs = { path = "../minirust-rs" }
miniutil = { path = "../miniutil"}

[dev-dependencies]
ui_test = "0.23"

[[test]]
name = "ui"
harness = false
